# swc-plugin-react-remove-properties

./: .gitignore  README.md
.github/workflows/: CI.yml  Publish.yml
plugin/: Cargo.toml  package.json
plugin/src/: lib.rs
visitor/: Cargo.toml
visitor/src/: lib.rs
