[package]
name = "swc-plugin-react-remove-properties"
version = "0.1.3"
authors = ["Pig Fang <g-plane@hotmail.com>"]
description = "SWC plugin for removing React properties."
license = "MIT"
repository = "https://github.com/g-plane/swc-plugin-react-remove-properties"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
matchable = { version = "0.1", features = ["serde"] }
regex = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
swc-react-remove-properties-visitor = { path = "../visitor", version = "0.1" }
swc_core = { version = "0.75", features = ["ecma_plugin_transform"] }
