[package]
name = "swc-react-remove-properties-visitor"
version = "0.1.2"
authors = ["Pig Fang <g-plane@hotmail.com>"]
description = "SWC visitor for removing specific React properties."
license = "MIT"
repository = "https://github.com/g-plane/swc-plugin-react-remove-properties"
edition = "2021"

[dependencies]
matchable = "0.1"
regex = "1.7"
swc_core = { version = "0.75", features = [
    "ecma_ast",
    "ecma_plugin_transform",
    "ecma_utils",
] }

[dev-dependencies]
swc_ecma_parser = "0.133"
